--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,13 @@
 
   <head>
     <meta charset="utf-8">
-    <title>brainy-boilerplate</title>
+    <title>boop</title>
   </head>
 
   <body>
+
     <script data-main="js/config" src="js/lib/require.js"></script>
+
   </body>
 
 </html>
