no more scaffolding

--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,11 @@
 
   <head>
     <meta charset="utf-8">
-    <title>boop</title>
+    <title>brainy-boilerplate</title>
   </head>
 
   <body>
-
-    <script data-main="js/config" src="js/lib/require.js"></script>
-
+    <script data-main="/js/config" src="/js/lib/require.js"></script>
   </body>
 
 </html>
